# Yolov7App

./: .gitignore  MaskDetector.py  ObjectDetector.py  PoseDetector.py  README.md  export.py  package-lock.json  requirements.txt  venv.sh  videoCapt.py
app/: .gitignore  README.md  electron-builder.yml  forge.config.cjs  index.html  main.js  package - 副本.json  package-lock.json  package.json  preload.js  tsconfig.json  vite.config.ts  vue.config.js
app/backend/: CMakeLists.txt  Camera.cpp  Camera.h  WebSocketServer.cpp  WebSocketServer.h  example.cpp  main.cpp  server.cpp
app/backend/CvInference/: CMakeLists.txt  inference.cpp  inference.h
app/backend/CvInference/demo/: 1111.txt  V8Test.cpp
app/backend/ModelPredict/: CMakeLists.txt  ModelPredict.cpp  ModelPredict.h  ModelPredictGlobal.h
app/backend/ModelPredict/demo/: CMakeLists.txt  demo_main.cpp
app/backend/cmake/: OnnxDeployUtils.cmake
app/backend/cmake/modules/: FindONNX.cmake
app/backend/sandbox/: WebSocketServer.cpp  WebSocketServer.h
app/src/: App.vue  main.mjs  main.ts
app/src/assets/: style.css
app/src/components/: Layout.vue  RouterMenuItem.vue
app/src/router/: router.ts
app/src/views/: About.vue  Analysis.vue  Detectron.vue  Estimation.vue  PlatForm.vue  Segmentation.vue
models/: common.py  yolo.py
scripts/: get_coco.sh
utils/: general.py
